<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_color_black"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/black"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/circle_black" />

    <ImageView
        android:id="@+id/image_color_red"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/red"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_red" />

    <ImageView
        android:id="@+id/image_color_yellow"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/yellow"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_yellow" />

    <ImageView
        android:id="@+id/image_color_green"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/green"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_green" />

    <ImageView
        android:id="@+id/image_color_blue"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/blue"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_blue" />

    <ImageView
        android:id="@+id/image_color_pink"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/pink"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_pink" />

    <ImageView
        android:id="@+id/image_color_brown"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/brown"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_brown" />

    <ImageView
        android:id="@+id/image_color_white"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/white"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp"
        android:src="@drawable/circle_white_1" />
</LinearLayout>