<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".activity.DrawingActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.divyanshu.draw.widget.DrawView
        android:id="@+id/draw_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background" />

    <ImageView
        android:id="@+id/image_close_drawing"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@color/color_white"
        android:foreground="?selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:src="@drawable/ic_close_black_24dp"
        android:tooltipText="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color"
        tools:targetApi="o" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send_drawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_done_black_24dp"
        android:tint="@color/color_white"
        android:tooltipText="@string/save"
        app:backgroundTint="@color/color_black"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_close_drawing"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/draw_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:elevation="4dp"
        android:translationY="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/image_draw_eraser"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_eraser_black_24dp"
            android:tooltipText="@string/eraser"
            app:layout_constraintEnd_toStartOf="@id/image_draw_width"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color_selector"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/image_draw_width"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_adjust_black_24dp"
            android:tooltipText="@string/stroke_width"
            app:layout_constraintEnd_toStartOf="@id/image_draw_color"
            app:layout_constraintStart_toEndOf="@id/image_draw_eraser"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color_selector"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/image_draw_color"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_color_lens_black_24dp"
            android:tooltipText="@string/color"
            app:layout_constraintEnd_toStartOf="@id/image_draw_opacity"
            app:layout_constraintStart_toEndOf="@id/image_draw_width"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color_selector"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/image_draw_opacity"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_opacity_black_24dp"
            android:tooltipText="@string/opacity"
            app:layout_constraintEnd_toStartOf="@id/image_draw_undo"
            app:layout_constraintStart_toEndOf="@id/image_draw_color"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color_selector"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/image_draw_undo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_undo_black_24dp"
            android:tooltipText="@string/undo"
            app:layout_constraintEnd_toStartOf="@id/image_draw_redo"
            app:layout_constraintStart_toEndOf="@id/image_draw_opacity"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color_selector"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/image_draw_redo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_redo_black_24dp"
            android:tooltipText="@string/redo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_draw_undo"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color_selector"
            tools:targetApi="o" />

        <SeekBar
            android:id="@+id/seekBar_width"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:progress="8"
            app:layout_constraintEnd_toStartOf="@+id/circle_view_width"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_draw_eraser" />

        <com.divyanshu.draw.widget.CircleView
            android:id="@+id/circle_view_width"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_draw_eraser" />

        <SeekBar
            android:id="@+id/seekBar_opacity"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:progress="100"
            app:layout_constraintEnd_toStartOf="@+id/circle_view_opacity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_draw_eraser" />

        <com.divyanshu.draw.widget.CircleView
            android:id="@+id/circle_view_opacity"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_draw_eraser" />

        <include
            android:id="@+id/draw_color_palette"
            layout="@layout/color_palette_view"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_draw_eraser" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>